tests/NormalTests/paczka1/fuzzy1/17393344.err
Error in line 10: lr3sOTendl S625 325,25
Error in line 9: lr3sOTendl S625 86,8
Error in line 20: ukswGtVta S683 55,0
Error in line 23: Y6DfxeGrFLZ S625 78,1
Error in line 29: AkWNVT S683 45,0
